--- a/readme.me
+++ b/readme.me
@@ -1,21 +1,24 @@
-=== Recurring Payment ===
-Tags: Subscription managment, Recurring payment
-Requires : 
-Tested up to: 0.0
-Requires PHP: 7.0
-License: Apache 2
-License URI: https://www.apache.org/licenses/LICENSE-2.0
+# Recurring Payments
+### Wordpress Recurring Payments
 
-== Description ==
+## Introduction
 
-Recurring plugin is open-source subscription managment for wordpress focus on Recurring Payments solution. 
+The Recurring payments is a plugin for wordpress easy to use & manage your subscriptions for your products / Services and easy manage the recurring payment for them.
 
-== Installation ==
+For more details, please do not hesitate to contact us - your_email@yourdomain.com
 
-= Minimum Requirements =
+## Compatibility
+PHP 7.0.0
 
-* PHP 7.2 or greater is recommended
-* MySQL 5.6 or greater is recommended
-* An active account in our platform
+## Installation 
 
-= How to install  =
+You can install the plugin via wordpress marketplace or download it from GIT and upload to your worpress plugin section
+
+```
+    The URL of GITHUB
+```
+
+## Configuration
+* API-key
+* Signiture
+* ,...
