--- a/readme.me
+++ b/readme.me
@@ -8,7 +8,7 @@ The Recurring payments is a plugin for wordpress easy to use & manage your subsc
 For more details, please do not hesitate to contact us - your_email@yourdomain.com
 
 ## Compatibility
-PHP 7.0.0
+PHP 7.4.x
 
 ## Installation 
 
@@ -22,3 +22,6 @@ You can install the plugin via wordpress marketplace or download it from GIT and
 * API-key
 * Signiture
 * ,...
+
+## Requirements
+* HTTPS
