No SSL working too

--- a/readme.me
+++ b/readme.me
@@ -19,9 +19,15 @@ You can install the plugin via wordpress marketplace or download it from GIT and
 ```
 
 ## Configuration
-* API-key
-* Signiture
-* ,...
+From Wordpress admin panel, set the configurations/var/www/html/wordpress-ntp-recurring/wp-content/plugins/netopia-recurring/readme.me
+* following fields are **mandatory**
+    * in Setting Tab
+        * API-key
+        * Signiture
+        * Public & Private keys
+    * in Notify management Tab
+        * Subscription notify url
 
+* 
 ## Requirements
 * HTTPS
