--- a/readme.me
+++ b/readme.me
@@ -28,6 +28,10 @@ From Wordpress admin panel, set the configurations/var/www/html/wordpress-ntp-re
     * in Notify management Tab
         * Subscription notify url
 
-* 
+* Following field are not mandatory
+
+## Plugin work mood 
+* Defulte is on **SANDBOX** 
+
 ## Requirements
 * HTTPS
