--- a/i18n/languages/ntpRp-ro_RO.po
+++ b/i18n/languages/ntpRp-ro_RO.po
@@ -8,8 +8,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 2.0.6\n"
-"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?"
-"2:1));\n"
+"Plural-Forms: nplurals=3; plural=(n==1?0:(((n%100>19)||((n%100==0)&&(n!=0)))?2:1));\n"
 "Last-Translator: \n"
 "Language: ro_RO\n"
 
@@ -17,33 +16,37 @@ msgstr ""
 msgid "configuration"
 msgstr ""
 
-#: about_plugin.php:8
-msgid "Welcome to NETOPIA Payments - Recurring payment"
-msgstr "Bin venit la NETOPIA Payments - Plugin de plată recurentă"
+#: include\about_plugin.php:2
+msgid "Welcome to Recurring payments!"
+msgstr "Bin venit la  plată recurentă"
+
+#: include\about_plugin.php:3
+msgid "Recurring payments plugin lets you focus on your sales, and we will manage your subscriptions & the periodic payments of your subscribers."
+msgstr "Pluginul de plăți recurente vă permite să vă concentrați pe vânzări, iar noi vă vom gestiona abonamentele și plățile periodice ale abonaților dvs."
+
+#: include\about_plugin.php:9
+msgid "Learn more"
+msgstr "Află mai multe"
 
 #: about_plugin.php:9
-msgid ""
-"Click <a href=\"%s\" target=\"blank\">here</a> if you dont have account in "
-"<a href=\"%s\" target=\"blank\">NETOPIA Payments</a>"
-msgstr ""
-"Faceți click <a href=\"%s\" target=\"blank\">aici</a> dacă nu aveți un cont "
-"în <a href=\"%s\" target=\"blank\">NETOPIA Payments</a>"
+msgid "Click <a href=\"%s\" target=\"blank\">here</a> if you dont have account in <a href=\"%s\" target=\"blank\">NETOPIA Payments</a>"
+msgstr "Faceți click <a href=\"%s\" target=\"blank\">aici</a> dacă nu aveți un cont în <a href=\"%s\" target=\"blank\">NETOPIA Payments</a>"
 
-#: about_plugin.php:10
+#: include\about_plugin.php:6
 msgid ""
-"Otherwise, is enghout to complete the setting in Recurring payment "
-"configuration <a href=\"?page=netopia_recurring&tab=display_setting\" target="
-"\"blank\">setting tab</a>"
+"Otherwise, is enghout to complete the setting in Recurring payment configuration <a href=\"?page=netopia_recurring&tab=display_setting\" >setting tab</a>"
 msgstr ""
-"În caz in care aveti deja count, este suficient să finalizați setarea pentru "
-"configurarea plăților recurente <a href=\"?"
-"page=netopia_recurring&tab=display_setting\" target=\"blank\">sectie de "
-"setari</a>"
+"În caz in care aveti deja count, este suficient să finalizați setarea pentru configurarea plăților recurente <a href=\"?"
+"page=netopia_recurring&tab=display_setting\" target=\"blank\">sectie de setari</a>"
 
-#: wc-netopiapayments-recurring.php:50
+#: wc-netopiapayments-recurring.php:420
 msgid "About plugin"
 msgstr "Despre plugin"
 
-#: wc-netopiapayments-recurring.php:51
+#: wc-netopiapayments-recurring.php:421
 msgid "Setting"
 msgstr "Setari"
+
+#: wc-netopiapayments-recurring.php:423
+msgid "Account page management"
+msgstr "Pagina de count"
